# rusty-region

./: .gitignore  Cargo.toml  INSTALL.md  README.md  ex.py  pyproject.toml
python/: INSTALL.md  pyproject.toml
python/rusty_region/: __init__.py  parser.py  region.py
python/tests/: conftest.py  test_basic_parsing.py  test_coordinate_formats.py  test_simple.py
src/: lib.rs  semantic_parsers.rs
