# Cargo.toml
# Defines the Rust package metadata and dependencies.

[package]
name = "rusty_region"
version = "0.1.0"
edition = "2021"
description = "A parser for DS9 region files"
license = "MIT" # Or choose another license
repository = "https://github.com/your_username/rusty_region" # Optional: Add your repo URL

[dependencies]
nom = "7.1"

[dev-dependencies]
# Dependencies needed only for running tests or examples

