# Cargo.toml

[package]
name = "rusty_region"
version = "0.1.0"
edition = "2021"
description = "A parser for DS9 region files using nom, with Python bindings"
license = "MIT"

[lib]
name = "rusty_region_parser" # Name of the python module file (e.g., rusty_region_parser.so)
crate-type = ["cdylib"] # Compile dynamic library for Python

[dependencies]
nom = "7.1.3" # Using the latest 7.1.x version
pyo3 = { version = "0.21", features = ["extension-module"] }

[dev-dependencies]
# For Rust tests
# criterion = "0.5" # Optional: for benchmarking

# [[bench]] # Optional: for benchmarking
# name = "parser_bench"
# harness = false
