[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "rusty-region" # Name on PyPI
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]
# Add other metadata like authors, description, readme, license, etc.

[tool.maturin]
features = ["pyo3/extension-module"]
# Optional: Specify the binding name if different from lib name in Cargo.toml
# bindings = "rusty_region_parser"

